examples/negative/patterns/non_exhaustive_match.kai
# Negative fixture (#520 / patterns): a `match` over a sum type
# omits one variant. Typer must reject with a non-exhaustive
# diagnostic that names the missing variant.

type Color = Red | Green | Blue

fn name(c: Color) : Int = match c {
  Red -> 1
  Green -> 2
}

fn main() : Int = name(Red)
